fix for bottom text on smaller viewports

--- a/reborn-template/templates/reborn/style.css
+++ b/reborn-template/templates/reborn/style.css
@@ -172,7 +172,7 @@ td.white {
     }
     .bottom-text {
         text-align: center;
-        color: white;
+        color:black;
     }
 }
 
@@ -191,7 +191,7 @@ td.white {
     }
     .bottom-text {
         text-align: center;
-        color: white;
+        color: black;
     }
 }
 
